force-app/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Incident / Observation</label>
    <nameField>
        <displayFormat>Incident/Obs-{0000}</displayFormat>
        <label>Incident/Observation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents / Observations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>