force-app/main/default/objects/Incident__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <inlineHelpText>When a date is filled in, the hold is closed, even if the date is in the future.</inlineHelpText>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>