force-app/main/default/objects/Incident__c/fields/Balance_Days_Applied__c.field-meta.xml
<CustomField>
    <fullName>Balance_Days_Applied__c</fullName>
    <inlineHelpText>If Write-Up is in response to excessive absences, enter the number of days to add to Number of Program Days Off Remaining.</inlineHelpText>
    <label>Balance Days Applied</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>