force-app/main/default/objects/Incident__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Limitation</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Praise</fullName>
            </value>
            <value>
                <fullName>Send Out Hold</fullName>
            </value>
            <value>
                <fullName>Program Hold</fullName>
            </value>
            <value>
                <fullName>Concern</fullName>
            </value>
            <value>
                <fullName>Observation</fullName>
            </value>
            <value>
                <fullName>Concern (Retention)</fullName>
            </value>
            <value>
                <fullName>Job Search Concern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>