force-app/main/default/objects/Incident__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>