force-app/main/default/objects/Incident__c/fields/Connects_Send_Out_Hold__c.field-meta.xml
<CustomField>
    <fullName>Connects_Send_Out_Hold__c</fullName>
    <label>Connects Send Out Hold</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>