force-app/main/default/objects/Incident__c/fields/Days_on_Hold_Post_SOE__c.field-meta.xml
<CustomField>
    <fullName>Days_on_Hold_Post_SOE__c</fullName>
    <formula>if (RecordTypeId &lt;&gt; &quot;012i0000000xnYj&quot;, NULL,

if (ispickval (Category__c, &quot;Concern&quot;), NULL,

if (isblank (Case_Record__r.Send_Out_Eligible_Date__c), 0,

if (not (isblank(Actual_End_Date__c)) &amp;&amp; Case_Record__r.Send_Out_Eligible_Date__c &gt; Actual_End_Date__c, 0,

if (not (isblank(Actual_End_Date__c)) &amp;&amp; Case_Record__r.Send_Out_Eligible_Date__c &gt; Effective_Date__c, Actual_End_Date__c - Case_Record__r.Send_Out_Eligible_Date__c,

if (not (isblank(Actual_End_Date__c)), Actual_End_Date__c - Effective_Date__c,

if (not (isblank(Case_Record__r.Inactive_Date__c)) &amp;&amp; Case_Record__r.Inactive_Date__c &gt; Effective_Date__c, Case_Record__r.Inactive_Date__c - Effective_Date__c,

if (not (isblank(Case_Record__r.Inactive_Date__c)), 0,

today() -  Effective_Date__c))))))))</formula>
    <label>Days on Hold, Post-SOE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>