force-app/main/default/objects/Incident__c/fields/Description_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Incident__c</fullName>
    <label>Description of Incident</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>