force-app/main/default/objects/Incident__c/fields/Description_of_Individual__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Individual__c</fullName>
    <inlineHelpText>Physical description</inlineHelpText>
    <label>Description of Individual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>