force-app/main/default/objects/Incident__c/fields/Distribute_to_Program_Services__c.field-meta.xml
<CustomField>
    <fullName>Distribute_to_Program_Services__c</fullName>
    <inlineHelpText>Option for Concern to be sent to Program Services distribution list.</inlineHelpText>
    <label>Distribute to Program Services</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>