force-app/main/default/objects/Incident__c/fields/ECM_Sharing__c.field-meta.xml
<CustomField>
    <fullName>ECM_Sharing__c</fullName>
    <inlineHelpText>ECMv1 field set by workflow and used in criteria based sharing.</inlineHelpText>
    <label>ECM Sharing</label>
    <length>80</length>
    <type>Text</type>
</CustomField>