force-app/main/default/objects/Incident__c/fields/Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked, this item will not be distributed via email when saved.</inlineHelpText>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>