force-app/main/default/objects/Incident__c/fields/Goal_Objective__c.field-meta.xml
<CustomField>
    <fullName>Goal_Objective__c</fullName>
    <inlineHelpText>Enter the end goal(s) or objective(s) to be met.

Review Panel Concerns - Appears to the participant in Cara Central as &quot;Next Steps&quot;</inlineHelpText>
    <label>Goal/Objective</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>