force-app/main/default/objects/Incident__c/fields/Incident_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date_and_Time__c</fullName>
    <label>Incident Date and Time</label>
    <type>DateTime</type>
</CustomField>