force-app/main/default/objects/Incident__c/fields/Incident_Summary__c.field-meta.xml
<CustomField>
    <fullName>Incident_Summary__c</fullName>
    <formula>if (

ispickval(Reason__c, &quot;Late to Cara/Cleanslate&quot;),

text(Effective_Date__c) &amp; &quot; | Issued During: &quot; &amp; text(Issued_During__c) &amp; br() &amp; &quot; Reason: &quot; &amp; text(Reason__c) &amp; br() 
&amp; &quot;-------------------------------&quot;,

text(Effective_Date__c) &amp; &quot; | Issued During: &quot; &amp; text(Issued_During__c) &amp;  &quot; | Staff: &quot; &amp;  Created_by_Summary__c  &amp; br() &amp; &quot; Reason: &quot; &amp; text(Reason__c) &amp; br() 
&amp; &quot;-------------------------------&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Summary</label>
    <type>Text</type>
</CustomField>