force-app/main/default/objects/Incident__c/fields/Issued_During__c.field-meta.xml
<CustomField>
    <fullName>Issued_During__c</fullName>
    <label>Issued During</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
                <default>true</default>
                <label>Program</label>
            </value>
            <value>
                <fullName>Program, Pre-Placement</fullName>
            </value>
            <value>
                <fullName>Cleanslate Internship</fullName>
            </value>
            <value>
                <fullName>Cleanslate, Pre-Placement</fullName>
            </value>
            <value>
                <fullName>Connects, Pre-Placement</fullName>
            </value>
            <value>
                <fullName>Facilities Internship</fullName>
            </value>
            <value>
                <fullName>Front Desk and Security Internship</fullName>
            </value>
            <value>
                <fullName>Cleanslate Internship, Pre-Reset</fullName>
            </value>
            <value>
                <fullName>Program, Pre-Reset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>