force-app/main/default/objects/Incident__c/fields/Legacy_PersonalDays_ID_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_PersonalDays_ID_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From PersonalDays table in legacy Access database</inlineHelpText>
    <label>Legacy PersonalDays ID (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>