force-app/main/default/objects/Incident__c/fields/Legacy_Prog_ID_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Prog_ID_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From Progress Notes table in legacy Access database</inlineHelpText>
    <label>Legacy Prog ID (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>