force-app/main/default/objects/Incident__c/fields/Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_End_Date__c</fullName>
    <inlineHelpText>Review Panel Concerns - Appears to the participant in Cara Central as &quot;Due Date&quot;</inlineHelpText>
    <label>Planned End Date</label>
    <type>Date</type>
</CustomField>