force-app/main/default/objects/Incident__c/fields/Process_Builder_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Process_Builder_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Builder Trigger</label>
    <type>Checkbox</type>
</CustomField>