force-app/main/default/objects/Incident__c/fields/Progress_Note_from_Service_Entry__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note_from_Service_Entry__c</fullName>
    <formula>Service_Entry__r.Progress_Note_Short__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows first 255 characters of Progress Note. To see full note, click on Service Entry link.</inlineHelpText>
    <label>Progress Note from Service Entry</label>
    <type>Text</type>
</CustomField>