force-app/main/default/objects/Incident__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>For COATs starting mid-FY19, &apos;Reason&apos; reflects competency observed.</description>
    <inlineHelpText>&quot;Coronavirus Pandemic&quot; has temporarily been added for Holds. 

Program Hold: Complete disengagement from programming due to focus on resolving a Coronavirus-related issue, such as own/dependent illness.

Send Out Hold: Preference or quarantine.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>90 Day Review Panel</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Business Only</fullName>
            </value>
            <value>
                <fullName>Child Care</fullName>
            </value>
            <value>
                <fullName>Committed to Job/School</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Conflict Management</fullName>
            </value>
            <value>
                <fullName>Coronavirus Pandemic</fullName>
            </value>
            <value>
                <fullName>Court Date</fullName>
            </value>
            <value>
                <fullName>Criminal Background Issues</fullName>
            </value>
            <value>
                <fullName>Did Not Leave A Reason</fullName>
            </value>
            <value>
                <fullName>Did not meet performance standards</fullName>
            </value>
            <value>
                <fullName>Did not sign-up for weekly workshop</fullName>
            </value>
            <value>
                <fullName>Docter&apos;s Appointment</fullName>
            </value>
            <value>
                <fullName>Employment Appointment</fullName>
            </value>
            <value>
                <fullName>Excessive absence</fullName>
                <label>Excessive reschedules/absences</label>
            </value>
            <value>
                <fullName>External Training</fullName>
            </value>
            <value>
                <fullName>Family Event</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Inappropriate attire</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Job Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Job-related appointment</fullName>
            </value>
            <value>
                <fullName>Lack of communication</fullName>
            </value>
            <value>
                <fullName>Lack of integrity</fullName>
            </value>
            <value>
                <fullName>Late to Cara/Cleanslate</fullName>
            </value>
            <value>
                <fullName>Late to Cara-related appointment</fullName>
            </value>
            <value>
                <fullName>Late to class</fullName>
            </value>
            <value>
                <fullName>Left Cara Day early</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>