force-app/main/default/objects/Incident__c/fields/Reset_Write_Ups__c.field-meta.xml
<CustomField>
    <fullName>Reset_Write_Ups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Write Ups</label>
    <type>Checkbox</type>
</CustomField>