force-app/main/default/objects/Incident__c/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incidents_Observations</relationshipName>
    <type>Lookup</type>
</CustomField>