force-app/main/default/objects/Incident__c/fields/Service_Entry_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Entry_Name__c</fullName>
    <label>Service Entry Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>