force-app/main/default/objects/Incident__c/fields/Status_Exp__c.field-meta.xml
<CustomField>
    <fullName>Status_Exp__c</fullName>
    <label>Status (Exp)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Regular</fullName>
            </value>
            <value>
                <fullName>2 - Monitored</fullName>
            </value>
            <value>
                <fullName>3 - Restricted</fullName>
            </value>
            <value>
                <fullName>4 - Suspended</fullName>
            </value>
            <value>
                <fullName>5 - Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>