force-app/main/default/objects/Incident__c/fields/Strategic_Job_Search_Focus_Stage__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Job_Search_Focus_Stage__c</fullName>
    <inlineHelpText>Which SJS stage was the focus of this Student Progress Meeting?</inlineHelpText>
    <label>Strategic Job Search Focus Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand Development</fullName>
                <color>#3366FF</color>
                <label>Brand Development</label>
            </value>
            <value>
                <fullName>Career Planning</fullName>
                <color>#FFCC33</color>
                <label>Career Planning</label>
            </value>
            <value>
                <fullName>Researching and Applying for Jobs</fullName>
                <color>#CC0000</color>
                <label>Researching and Applying for Jobs</label>
            </value>
            <value>
                <fullName>Interviewing and Networking</fullName>
                <color>#33CC00</color>
                <label>Interviewing and Networking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>