force-app/main/default/objects/Incident__c/recordTypes/COAT.recordType-meta.xml
<RecordType>
    <fullName>COAT</fullName>
    <active>true</active>
    <label>COAT</label>
</RecordType>