force-app/main/default/objects/Incident__c/recordTypes/Hold_Concern.recordType-meta.xml
<RecordType>
    <fullName>Hold_Concern</fullName>
    <active>true</active>
    <label>Hold/Concern</label>
</RecordType>