force-app/main/default/objects/Incident__c/recordTypes/Service_Plan.recordType-meta.xml
<RecordType>
    <fullName>Service_Plan</fullName>
    <active>false</active>
    <label>Service Plan</label>
</RecordType>