force-app/main/default/objects/Incident__c/recordTypes/Student_Progress_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Student_Progress_Meeting</fullName>
    <active>false</active>
    <label>Student Progress Meeting</label>
</RecordType>