force-app/main/default/objects/Incident__c/recordTypes/Write_Up.recordType-meta.xml
<RecordType>
    <fullName>Write_Up</fullName>
    <active>true</active>
    <label>Write-Up</label>
</RecordType>