force-app/main/default/objects/Incident__c/validationRules/Business_Only_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Only_Hold</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval(Reason__c, &quot;Business Only&quot;)

&amp;&amp;

(isblank(text(Category__c)) || ispickval(Category__c, &quot;Program Hold&quot;) || ispickval(Category__c, &quot;Concern&quot;))</errorConditionFormula>
    <errorMessage>Please select Send Out Hold as the Category.</errorMessage>
</ValidationRule>