force-app/main/default/objects/Incident__c/validationRules/StatusRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusRequired</fullName>
    <active>true</active>
    <description>Make it too were you have to choose a status option.</description>
    <errorConditionFormula>NOT(OR(
  ISPICKVAL(Status__c, &quot;Unresolved&quot;),
  ISPICKVAL(Status__c, &quot;Resolved&quot;)
))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You must choose a Status option to save.</errorMessage>
</ValidationRule>