force-app/main/default/objects/Incident__c/validationRules/Supportive_Services_Only_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Supportive_Services_Only_Hold</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval(Reason__c, &quot;Supportive Services Only&quot;)

&amp;&amp;

(isblank(text(Category__c)) || ispickval(Category__c, &quot;Send Out Hold&quot;) || ispickval(Category__c, &quot;Concern&quot;))</errorConditionFormula>
    <errorMessage>Please select Program Hold as the Category.</errorMessage>
</ValidationRule>